--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-gesture-handler": "^2.6.0",
